deploy/aods-system/overlays/orbstack/delete-virtualservice.yaml
$patch: delete
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: aods
